final data for 2017

--- a/biobib_kkc.tex
+++ b/biobib_kkc.tex
@@ -20,13 +20,13 @@
 BIO-BIBLIOGRAPHY & \hfill University of California, Santa Barbara \\ \\
  & \hfill June 30, 2018 \\ \\
  Kelly K. Caylor &   \\ 
- Professor I & 
+ Professor II & 
  \end{tabularx}
 
 \vspace{1cm}
 % Last update filed on June 30, 2013 
 
-This update refers to the period January 30, 2015 to June 30, 2018
+This update refers to the period July 1, 2016 to June 30, 2018
 
 \vspace{1cm}
 \centering {\textbf{ \large Curriculum Vitae}}
@@ -43,7 +43,7 @@ University of Virginia, B.A., 1996
 \vspace{0.5cm}
 \underline{Area of Specialization}
 
-Ecohydrological dynamics, Isotope ecohydrology, Coupled natural-human systems
+Ecohydrology, Isotope hydrology, Coupled natural-human systems, Environmental sensing.
 
 \vspace{0.5cm}
 \underline{Previous Academic or Professional Appointments}
