final versions of tex files

--- a/tex/Publications.tex
+++ b/tex/Publications.tex
@@ -1,5 +1,5 @@
 % UC Bio-bib Publication Table
-% Created on 2018-06-30 06:58
+% Created on 2018-06-30 11:26
 
 \tablehead{\# & Year & Title and Authors & Publisher & Category\\ \hline}
 \begin{supertabular}{lcp{8.25cm}p{4.75cm}p{1.75cm}}
@@ -93,7 +93,7 @@
 86 & 2017 & {\bf Triple oxygen isotope composition of leaf waters in Mpala, central Kenya}, Li, S., Dennis, K., Levin, N., Soderberg, K, Caylor, KK [\url{ https://doi.org/10.1016/j.epsl.2017.02.015 }] & \emph{ Earth \& Planetary Science Letters } & Refereed Article\\
 87 & 2017 & {\bf Validation of SMAP surface soil moisture products with core validation sites}, Colliander, A, Jackson, TJ, Bindish, R., others, including, Caylor, KK [\url{ https://doi.org/10.1016/j.rse.2017.01.021 }] & \emph{ Remote Sensing of Environment } & Refereed Article\\
 88 & 2017 & {\bf Leaf water 18O and 2H maps show directional enrichment discrepancy in Colocasia esculenta}, Gerlain-Safdi, C., Gauthier, P., Sinkler, C., Caylor, KK [\url{ https://doi.org/10.1111/pce.13002 }] & \emph{ Plant, Cell, \& Environment } & Refereed Article\\
-89 & 2017 & {\bf Calibration of a parsimonious distributed ecohydrological daily model in a data-scarce basin using exclusively the spatio-temporal variation of NDVI}, Ruiz-Perez, G., Kock, J., Manfreda, Salvatore, Caylor, KK, Frances, F. [\url{ https://doi.org/10.5194/hess-21-6235-2017 }] & \emph{ Hydrology and Earth System Science Discussions } & Refereed Article\\
+89 & 2017 & {\bf Calibration of a parsimonious distributed ecohydrological daily model in a data-scarce basin using exclusively the spatio-temporal variation of NDVI}, Ruiz-Perez, G., Kock, J., Manfreda, Salvatore, Caylor, KK, Frances, F. [\url{ https://doi.org/10.5194/hess-21-6235-2017 }] & \emph{ Hydrology and Earth System Science } & Refereed Article\\
 90 & 2018 & {\bf Simulated sensitivity of African terrestrial ecosystem photosynthesis to rainfall frequency, intensity, and rainy season length}, Guan, K., Good, S.P., Caylor, K.K., Medvigy, D., Pan, Ming, Wood, E.F., Sato, H., Biasutti, M., Chen, M., Ahlstrom, A., Xiangtao, X. [\url{ https://doi.org/10.1088/1748-9326/aa9f30 }] & \emph{ Environmental Research Letters } & Refereed Article\\
 91 & 2018 & {\bf Measurements and Observations in the XXI century (MOXXI): innovation and multidisciplinarity to sense the hydrological cycle}, Flavia, T., Selker, J., van de Giesen, N., Abrate, T., Uijlenhoet, R., Porfiri, M., Manfreda, S., Caylor, KK, 22 others [\url{ https://doi.org/10.1080/02626667.2017.1420191 }] & \emph{ Hydrological Sciences Journal } & Refereed Article\\
 92 & 2018 & {\bf A large--area, spatially continuous assessment of land cover map error and its impact on downstream analyses}, Estes, L, Chen, P., Debats, S., Evans, T., Ferreira, S., Ragazzo, G., Sheffield, J, Wolf, A., Wood, EF, Caylor, KK [\url{ https://doi.org/10.1111/gcb.13904 }] & \emph{ Global Change Biology } & Refereed Article\\
