added MESM projects'

--- a/biobib_kkc.tex
+++ b/biobib_kkc.tex
@@ -118,13 +118,54 @@ American Geophysical Union, Association of American Geographers, American Associ
 %\newpage
 
 \vspace{1cm}
-\textbf{PART II.  TEACHING (50\% Geography Dept. workload: 1.5 courses; 50\%Bren School workload: 1.75 courses. Teaching release throughout the review period.)$^1$}
+\textbf{PART II.  TEACHING (50\% Geography Dept. workload; 50\%Bren School workload. Teaching release throughout the review period.)$^1$}
 
-\lfoot{\footnotesize $^1$ The ERI directorship is for a 5-year term with annual reappointment.  The appointment comes with a 50\% teaching load reduction. Therefore, my four-year annual teaching load in Geography is 1-0-1-1, and in Bren it is advising one group project per year, and 0.5/yr teaching ESM 203 starting in Fall 2018.}
+\vspace{0.5cm}
+
+\textbf{Workload Descriptions}
+
+\begin{enumerate}
+{\footnotesize
+
+\item {\em Geography Department}: Geography department teaching workload for full-time ladder faculty is 3 Instructional Workload Courses (IWC) per year. 50\% workload is 1.5 IWC per year.
+
+\item {\em Bren School}:  The official teaching workload in the Bren School for full-time ladder faculty members is 3.5 Instructional Workload Courses (IWC) per academic year. Full-time faculty are expected to be in residence during the academic year and teach at least two out of three quarters unless they are on sabbatical or approved leave. Each quarter on sabbatical counts as 1.17 IWC for full-time faculty. The teaching workload for faculty with partial appointments is the equivalent fraction of 3.5 and the teaching workload is negotiated with the dean.
+
+Every full-time faculty member will advise or co-advise a Master’s Group Project (ESM 401 series) or Eco-E Project (ESM 402 series) equivalent to 1 IWC. Faculty advisors are expected to meet with master’s groups weekly during the academic year.
+
+Course Equivalencies:
+\begin{itemize}
+    \item ESM 401A/ESM 402A: 4 units = 0.29 IWC 
+    \item ESM 401B/ESM 402B: 4 units = 0.29 IWC
+    \item ESM 401C/ESM 402C: 4 units = 0.29 IWC
+    \item ESM 401D/ESM 402D: 2 units = 0.13 IWC
+\end{itemize}
+
+Every full-time faculty member will teach and/or co-teach core courses, elective courses and seminars in the MESM and PhD programs equivalent to at least (a) 2.5 IWC in addition to advising a project or (b) 3.5 IWC if not advising a project. 
+
+Course Equivalencies:
+\begin{itemize}
+    \item MESM core and elective courses: 4 units = 1 IWC; 2 units = 0.5 IWC.
+    \item Co-taught 4-unit MESM core course = 0.6 IWC per instructor.
+    \item Co-taught 4-unit MESM elective course = 0.5 IWC per instructor.
+    \item MESM lab course: 4 or 5 units = 1 IWC.
+    \item Teaching an additional section (e.g., ESM 263) = 0.67 IWC.
+    \item PhD core courses: ESM 510 (1 unit) = 0.25 IWC; ESM 512 (2 units) = 0.5 IWC; ESM 514 (4 units) = co-taught at 1 IWC per instructor.
+    \item PhD seminar course: 2 units = 0.5 IWC; 4 units = 1 IWC.
+\end{itemize}
+}
+\end{enumerate}
+
+\lfoot{\footnotesize $^1$ The ERI directorship is for a 5-year term with annual reappointment.  The appointment comes with a 50\% teaching load reduction. Therefore, my four-year annual teaching load in Geography is 1-0-1-1 (an average of 0.75 IWC per year), and in Bren it is advising one group project per year, and co-teaching the MESM core course ESM 203 starting in Fall 2018 (a total of 1.6 IWC per year.}
 \vspace{0.5cm}
 {\bf Catalog Courses:}
 \vspace{0.25cm}
 \input{tex/Courses}
+
+\vspace{0.5cm}
+{\bf MESM Projects Advised}
+\vspace{0.25cm}
+\input{tex/MESMProjects}
 
 \vspace{1cm}
 {\bf Undergraduate Projects Directed:}
