added MESM projects

--- a/biobib_kkc.tex
+++ b/biobib_kkc.tex
@@ -3,6 +3,7 @@
 \usepackage{tabularx}
 \usepackage{fancyhdr}
 \usepackage{supertabular}
+\usepackage{makecell}
 \usepackage{array}
 \usepackage[linkcolor=red,urlcolor=red]{hyperref}
 \usepackage[official]{eurosym}
@@ -24,7 +25,7 @@ BIO-BIBLIOGRAPHY & \hfill University of California, Santa Barbara \\ \\
  \end{tabularx}
 
 \vspace{1cm}
-% Last update filed on June 30, 2013 
+% Last update filed on June 30, 2018
 
 This update refers to the period July 1, 2016 to June 30, 2018
 
@@ -83,39 +84,19 @@ American Geophysical Union, Association of American Geographers, American Associ
 \input{tex/InPress}
 }
 
-% \lfoot{\footnotesize *Previously listed as Work In Press; publication 43 was B-1, publication 44 was B-2.
-% **Previously listed as Work Submitted. Publication 45 was C-4, publication 46 was C-1, publication 48 was C-3, and publication 50 was C-2.
- % ***Publication 51 was previously listed as Work in Progress (D-1). \\ \quad \\ Note: The doi number is an active hyperlink to the published article.}
- % \lfoot{\footnotesize Note: All doi's are active hyperlinks.}
- % 
+ 
 
 \vspace{0.2cm}
+
 {\bf Work Submitted:}
+
+% For some reason, I need this for the list to appear...
+{\tiny :}
 
 \vspace{0.15cm}
 {\setlength{\extrarowheight}{3.5pt}
 \input{tex/Submitted}
 }
-
-% \vspace{0.2cm}
-% {\bf Conference Proceedings:}
-
-% \vspace{0.15cm}
-% {\setlength{\extrarowheight}{3.5pt}
-% \input{Proceedings}
-% }
-
-
-%\clearpage
-%\lfoot{}
-%\vspace{0.2cm}
-%{\bf Works In Progress:}
-%
-%\vspace{0.15cm}
-%{\setlength{\extrarowheight}{3.5pt}
-%\input{bib.wor}
-%}
-%\newpage
 
 \vspace{1cm}
 \textbf{PART II.  TEACHING (50\% Geography Dept. workload; 50\%Bren School workload. Teaching release throughout the review period.)$^1$}
@@ -157,6 +138,9 @@ Course Equivalencies:
 \end{enumerate}
 
 \lfoot{\footnotesize $^1$ The ERI directorship is for a 5-year term with annual reappointment.  The appointment comes with a 50\% teaching load reduction. Therefore, my four-year annual teaching load in Geography is 1-0-1-1 (an average of 0.75 IWC per year), and in Bren it is advising one group project per year, and co-teaching the MESM core course ESM 203 starting in Fall 2018 (a total of 1.6 IWC per year.}
+
+\newpage
+
 \vspace{0.5cm}
 {\bf Catalog Courses:}
 \vspace{0.25cm}
