--- a/tex/InPress.tex
+++ b/tex/InPress.tex
@@ -1,9 +1,9 @@
 % UC Bio-bib Publications In Press Table
-% Created on 2018-06-30 11:35
+% Created on 2018-09-24 17:41
 
 \tablehead{\# & Year & Title and Authors & Publisher & Category\\ \hline}
 \begin{supertabular}{lcp{8.25cm}p{4.75cm}p{1.75cm}}
 P-1 & 2018 & {\bf Comparing empirical and survey-based yield forecasts in a dryland agro-ecosystem}, Zhao, Y., Vergopolan, N., Baylis, K, Blekkin, J. , Caylor, KK, Evans, T.P., Giroux, S., Sheffield, J, Estes, L.  & \emph{ Agricultural \& Forest Meteorology } & Refereed Article\\
-P-2 & 2018 & {\bf Dew-induced transpiration suppression impacts the water and isotope balances of Colocasialeave}, Gerlain-Safdi, C., Gauthier, P.G., Caylor, KK  & \emph{ Oecologia } & Refereed Article\\
+P-2 & 2019 & {\bf Biophysical effects on soil crack morphology in a faunally active dryland vertisol}, DeCarlo, K., Caylor, KK  & \emph{ Geoderma } & Refereed Article\\
 \end{supertabular}
 
