--- a/tex/Publications.tex
+++ b/tex/Publications.tex
@@ -1,5 +1,5 @@
 % UC Bio-bib Publication Table
-% Created on 2018-06-30 11:35
+% Created on 2018-09-24 17:41
 
 \tablehead{\# & Year & Title and Authors & Publisher & Category\\ \hline}
 \begin{supertabular}{lcp{8.25cm}p{4.75cm}p{1.75cm}}
@@ -100,5 +100,6 @@
 93 & 2018 & {\bf The Spatial and Temporal Domains of Modern Ecology}, Estes, L, Elsen, P., Truer, T., Ahmed, L., Caylor, KK., Chang, J., Choi, J., Ellis, E [\url{ https://doi.org/10.1038/s41559-018-0524-4 }] & \emph{ Nature Ecology \& Evolution } & Refereed Article\\
 94 & 2018 & {\bf On the Use of Unmanned Aerial Systems for Environmental Monitoring}, Manfreda, S., McCabe, M, Miller, P., Lucas, R., Madrigal, V.P., Mallinis, G., Ben Dor, E., Helman, D., Estes, L., Ciraolo, G., 13 others including Caylor, K. [\url{ https://doi.org/10.3390/rs10040641 }] & \emph{ Remote Sensing } & Refereed Article\\
 95 & 2018 & {\bf Dew deposition suppresses transpiration and carbon uptake in leaves}, Gerlain-Safdi, C., Koohafkan, MC, Chung, M., Thompson, S, Rockwell, FE, Caylor, KK [\url{ https://doi.org/10.1016/j.agrformet.2018.05.015 }] & \emph{ Agriculture \& Forest Meteorology } & Refereed Article\\
+96 & 2018 & {\bf Dew-induced transpiration suppression impacts the water and isotope balances of Colocasialeave}, Gerlain-Safdi, C., Gauthier, P.G., Caylor, KK  & \emph{ Oecologia } & Refereed Article\\
 \end{supertabular}
 
