A million little changes. Added pdf links to all pubs. Reformatted grants table. Just worked too much on this.

--- a/biobib_kkc.tex
+++ b/biobib_kkc.tex
@@ -3,10 +3,13 @@
 \usepackage{tabularx}
 \usepackage{fancyhdr}
 \usepackage{supertabular}
+\usepackage{longtable}
 \usepackage{makecell}
 \usepackage{array}
 \usepackage[linkcolor=red,urlcolor=red]{hyperref}
 \usepackage[official]{eurosym}
+
+\setcounter{LTchunksize}{5}
 
 \pagestyle{fancy}
 \lhead{(Page \thepage)}
@@ -21,13 +24,18 @@
 BIO-BIBLIOGRAPHY & \hfill University of California, Santa Barbara \\ \\
  & \hfill June 30, 2018 \\ \\
  Kelly K. Caylor &   \\ 
- Professor II & 
+ Professor II & \\
+ Department of Geography & \\
+ Bren School of Environmental Science \& Management & \\
+ Director of Earth Research Institute & 
  \end{tabularx}
 
 \vspace{1cm}
-% Last update filed on June 30, 2018
+% Last update filed on October 6, 2018
 
-This update refers to the period July 1, 2016 to June 30, 2018
+This update refers to the period since appointment %July 1, 2016 
+to June 30, 2018
+
 
 \vspace{1cm}
 \centering {\textbf{ \large Curriculum Vitae}}
@@ -37,9 +45,9 @@ This update refers to the period July 1, 2016 to June 30, 2018
 \vspace{0.5cm}
 \underline{Education}
 
-University of Virginia, Ph.D., 2003
+University of Virginia, Ph.D., Environmental Sciences, 2003
 
-University of Virginia, B.A., 1996
+University of Virginia, B.A., with High Distinction, Environmental Sciences, 1996
 
 \vspace{0.5cm}
 \underline{Area of Specialization}
@@ -49,14 +57,16 @@ Ecohydrology, Isotope hydrology, Coupled natural-human systems, Environmental se
 \vspace{0.5cm}
 \underline{Previous Academic or Professional Appointments}
 \begin{tabular}{l p{5.5in} }
-2016 - \ \ \ \ & Full Professor, Bren School of Environmental Science \& Management, UCSB \\ 
-2016 - \ \ \ \ & Full Professor, Dept. of Geography, University of California, Santa Barbara \\ 
-2014 - 2016 & Director, Environmental Studies Program, Princeton University \\
-2013 - 2016 & Associate Professor, Dept. of Civil and Environmental Engineering, Princeton University \\
-2013 - 2016 & Affiliated Faculty, Dept. of Ecology and Evolutionary Biology, Princeton University \\
-2007 - 2012 \ \ \ \ & Assistant Professor, Dept. of Civil and Environmental Engineering, Princeton University \\
-2007 - \ \ \ \ & Adjunct Faculty, Department of Geography, Indiana University \\ 
+
 2005 - 2007 \ \ \ \  & Assistant Professor, Department of Geography, Indiana University \\
+2007 - \ \ \ \ & Adjunct Faculty, Department of Geography, Indiana University \\ 
+2007 - 2012 \ \ \ \ & Assistant Professor, Dept. of Civil and Environmental Engineering, Princeton University \\
+2013 - 2016 & Affiliated Faculty, Dept. of Ecology and Evolutionary Biology, Princeton University \\
+2013 - 2016 & Associate Professor, Dept. of Civil and Environmental Engineering, Princeton University \\
+2014 - 2016 & Director, Environmental Studies Program, Princeton University \\
+2016 - \ \ \ \ & Full Professor, Dept. of Geography, University of California, Santa Barbara \\ 
+2016 - \ \ \ \ & Full Professor, Bren School of Environmental Science \& Management, UCSB \\ 
+
 \end{tabular}
 
 \vspace{0.5cm}
@@ -66,12 +76,14 @@ American Geophysical Union, Association of American Geographers, American Associ
 
 \vspace{0.5cm}
 
+\newpage
+
 \textbf{PART I.  RESEARCH}
 
 \vspace{0.2cm}
 {\bf Cumulative List of Publications (or Creative Activities):}
 
-\vspace{0.2cm}
+%\vspace{0.2cm}
 {\setlength{\extrarowheight}{3.5pt}
 \input{tex/Publications} % modified to include url to pdf instead of doi for since last review -- argh
 }
@@ -79,7 +91,7 @@ American Geophysical Union, Association of American Geographers, American Associ
 \vspace{0.2cm}
 {\bf Works In Press:}
 
-\vspace{0.15cm}
+%\vspace{0.15cm}
 {\setlength{\extrarowheight}{3.5pt}
 \input{tex/InPress}
 }
@@ -93,13 +105,13 @@ American Geophysical Union, Association of American Geographers, American Associ
 % For some reason, I need this for the list to appear...
 {\tiny :}
 
-\vspace{0.15cm}
+%\vspace{0.15cm}
 {\setlength{\extrarowheight}{3.5pt}
 \input{tex/Submitted}
 }
 
 \vspace{1cm}
-\textbf{PART II.  TEACHING (50\% Geography Dept. workload; 50\%Bren School workload. Teaching release throughout the review period.)$^1$}
+\textbf{PART II.  TEACHING (50\% Geography Dept. workload; 50\% Bren School workload. Teaching release throughout the review period.)}
 
 \vspace{0.5cm}
 
@@ -134,21 +146,22 @@ Course Equivalencies:
     \item PhD core courses: ESM 510 (1 unit) = 0.25 IWC; ESM 512 (2 units) = 0.5 IWC; ESM 514 (4 units) = co-taught at 1 IWC per instructor.
     \item PhD seminar course: 2 units = 0.5 IWC; 4 units = 1 IWC.
 \end{itemize}
+
+\item The ERI directorship is for a 5-year term with annual reappointment.  The appointment comes with a 50\% teaching load reduction. Therefore, my four-year annual teaching load in Geography is 1-0-1-1 (an average of 0.75 IWC per year), and in Bren it is advising one group project per year, and co-teaching the MESM core course ESM 203 starting in Fall 2018 (a total of 1.6 IWC per year.
+
 }
 \end{enumerate}
 
-\lfoot{\footnotesize $^1$ The ERI directorship is for a 5-year term with annual reappointment.  The appointment comes with a 50\% teaching load reduction. Therefore, my four-year annual teaching load in Geography is 1-0-1-1 (an average of 0.75 IWC per year), and in Bren it is advising one group project per year, and co-teaching the MESM core course ESM 203 starting in Fall 2018 (a total of 1.6 IWC per year.}
-
-\newpage
+%\newpage
 
 \vspace{0.5cm}
 {\bf Catalog Courses:}
-\vspace{0.25cm}
+%\vspace{0.15cm}
 \input{tex/Courses}
 
 \vspace{0.5cm}
 {\bf MESM Projects Advised}
-\vspace{0.25cm}
+%\vspace{0.15cm}
 \input{tex/MESMProjects}
 
 \vspace{1cm}
@@ -163,11 +176,14 @@ Student & Project & Chair/ & Yr Deg \\
 %Eric Wilder & An assessment of environmental planning in Humboldt County, CA & Chair & 2010 \\ 
 \end{supertabular}
 }
+None.
 
 \vspace{1cm}
 {\bf Graduate Degree Committees, MA/MS Committees:}
 \vspace{0.25cm}
 \input{tex/GraduateAdvisingMS}
+None.
+
 
 \vspace{0.5cm}
 {\bf Graduate Degree Committees, Ph.D. Committees:}
@@ -175,13 +191,11 @@ Student & Project & Chair/ & Yr Deg \\
 \input{tex/GraduateAdvisingPhD}
 
 
-
 \vspace{0.5cm}
 {\bf Postdoctoral Scholars Supervised:}
-\vspace{0.25cm}
+%\vspace{0.25cm}
 \input{tex/PostdoctoralAdvising}
 
-\lfoot{}
 \vspace{0.5cm}
 {\bf Other Teaching Contributions:}
 
@@ -201,10 +215,18 @@ None
 \textbf{PART III.  PROFESSIONAL ACTIVITIES}
 
 \vspace{0.5cm}
-\textbf{Lectures Presented:}
+\textbf{Lectures and Seminars Presented:}
 \vspace{0.25cm}
 {\setlength{\extrarowheight}{3.5pt}
 \input{tex/Lectures}
+}
+
+
+\vspace{0.5cm}
+\textbf{Conference Posters and Presentations:}
+\vspace{0.25cm}
+{\setlength{\extrarowheight}{3.5pt}
+\input{tex/Proceedings}
 }
 
 %\newpage
