--- a/tex/Courses.tex
+++ b/tex/Courses.tex
@@ -1,24 +1,26 @@
 % UC Bio-bib Catalog Courses Table
-% Created on 2018-09-24 17:41
+% Created on 2018-10-10 23:23
 
-\tablehead{Qtr & Course & Class Type & Units & Hrs/Wk & Enrollment & Evals Available\\ \hline}
-\begin{supertabular}{lp{6.5cm}lrrrc}
-S18 & ESM 401A, Group Project - A & Tut & 4.0 & 2 & 5 & No \\
-S18 & ESM 401D, Group Project - D & Tut & 4.0 & 2 & 4 & No \\
-S18 & GEOG 200C, Intro to Geographical Research & Tut & 2.0 & 0 & 1 & No \\
-S18 & GEOG 597, Individual Study - PhD Exam & Tut &  & 2 & 1 & No \\
-S18 & GEOG 599, PhD Dissertation & Tut &  & 2 & 1 & No \\
-W18 & ESM 401C , Group Project - C & Tut & 4.0 & 2 & 4 & No \\
-W18 & GEOG 597, Individual Study - PhD Exam & Tut &  & 2 & 1 & No \\
-W18 & GEOG 599, PhD Dissertation & Tut &  & 2 & 1 & No \\
-F17 & GEOG 597, Individual Study - PhD Exam & Tut &  & 2 & 2 & No \\
-F17 & ESM 401B, Group Project - B & Tut & 4.0 & 2 & 4 & No \\
-S17 & ENV S 167, Biogoegraphy & Lec & 4.0 & 3 & 17 & Yes \\
-S17 & ESM 401A, Group Project - A & Tut & 4.0 & 2 & 4 & No \\
-S17 & GEOG 167, Biogeography & Lec & 4.0 & 3 & 11 & Yes \\
-S17 & GEOG 200C, Intro to Geographical Research & Tut & 2.0 & 0 & 1 & No \\
-S17 & GEOG 597, Individual Study - PhD Exam & Tut &  & 2 & 2 & No \\
-W17 & GEOG 597, Individual Study - PhD Exam & Tut &  & 2 & 1 & No \\
-F16 & GEOG 597, Individual Study - PhD Exam & Tut &  & 2 & 2 & No \\
-\end{supertabular}
+\begin{longtable}{lp{6.5cm}p{1cm}rrrp{2cm}}
+Qtr & Course & Class Type & Units & Hrs/Wk & Enrollment & ESCI/Written Evals Avail.\\
+\hline 
+\endhead 
+F16 & GEOG 597, Individual Study - PhD Exam & Tut &  & 2 & 1 & No/No \\
+W17 & GEOG 597, Individual Study - PhD Exam & Tut &  & 2 & 1 & No/No \\
+S17 & GEOG 167, Biogeography & Lec & 4.0 & 3 & 12 & Yes/Yes \\
+S17 & ENV S 167, Biogoegraphy & Lec & 4.0 & 3 & 17 & Yes/Yes \\
+S17 & ESM 401A, Group Project - A & Lec & 4.0 & 1 & 4 & No/No \\
+S17 & GEOG 597, Individual Study - PhD Exam & Tut &  & 2 & 2 & No/No \\
+S17 & GEOG 200C, Intro to Geographical Research & Tut & 2.0 & 1 & 1 & No/No \\
+F17 & ESM 401B, Group Project - B & Dis & 4.0 & 1 & 4 & No/No \\
+F17 & GEOG 597, Individual Study - PhD Exam & Tut &  & 2 & 2 & No/No \\
+W18 & ESM 401C , Group Project - C & Dis & 4.0 & 1 & 4 & No/No \\
+W18 & GEOG 597, Individual Study - PhD Exam & Tut &  & 2 & 1 & No/No \\
+W18 & GEOG 599, PhD Dissertation & Tut &  & 2 & 1 & No/No \\
+S18 & ESM 401A, Group Project - A & Lec & 4.0 & 1 & 5 & No/No \\
+S18 & ESM 401D, Group Project - D & Dis & 2.0 & 1 & 4 & No/No \\
+S18 & GEOG 597, Individual Study - PhD Exam & Tut &  & 2 & 1 & No/No \\
+S18 & GEOG 200C, Intro to Geographical Research & Tut & 2.0 & 1 & 1 & No/No \\
+S18 & GEOG 599, PhD Dissertation & Tut &  & 2 & 1 & No/No \\
+\end{longtable}
 
