--- a/tex/GraduateAdvisingPhD.tex
+++ b/tex/GraduateAdvisingPhD.tex
@@ -1,9 +1,11 @@
 % UC Bio-bib Catalog GraduateAdvising Table
-% Created on 2018-09-24 17:41
+% Created on 2018-10-10 23:23
 
-\tablehead{Student & Year & Instituion & Chair/Member & Current Employment\\ \hline}
-\begin{supertabular}{lp{1.5cm} p{3.5cm}p{2cm}p{4.5cm}}
-Cynthia Gerlein-Safdi & 2017 & Princeton University, Civil \& Environmental Engineering & Chair & Postdoctoral Researcher - University of Michigan\\
+\begin{longtable}{lp{1.5cm} p{4.5cm}p{2cm}p{4cm}}
+Student & Year & Instituion & Chair/Member & Current Employment\\
+\hline 
+\endhead 
+Cynthia Gerlein-Safdi & 2017 & Princeton University, Civil \& Environmental Engineering & Chair & Postdoctoral Researcher - U. of Michigan\\
 Stephanie Debats & 2017 & Princeton University, Civil \& Environmental Engineering & Chair & Autonomy Engineer - Uber\\
 Cascade Tuholske & In Progress & UCSB, Geography & Chair &  - \\
 Drew Gower & In Progress & Princeton University, Civil \& Environmental Engineering & Chair &  - \\
@@ -16,5 +18,5 @@ Fernanda Riberio & In Progress & UCSB, Geography & Committee Member &  - \\
 Mike Johnson & In Progress & UCSB, Geography & Committee Member &  - \\
 Sara Lafia & In Progress & UCSB, Geography & Committee Member &  - \\
 Susan Meerdink & In Progress & UCSB, Geography & Committee Member &  - \\
-\end{supertabular}
+\end{longtable}
 
