--- a/tex/MESMProjects.tex
+++ b/tex/MESMProjects.tex
@@ -1,8 +1,10 @@
 % UC Bio-bib MESM Projects Table
-% Created on 2018-09-24 17:41
+% Created on 2018-10-10 23:23
 
-\tablehead{Year & Project Title & Students & Q3 & Q4 & Q5 & Q7\\ \hline}
-\begin{supertabular}{lp{2.5cm}p{3cm}p{2cm}p{2cm}p{2cm}p{2cm}}
+\begin{longtable}{p{1cm}p{2.5cm}p{3cm}p{2cm}p{2cm}p{2cm}p{2cm}}
+Year & Project Title & Students & Q3 & Q4 & Q5 & Q7\\
+\hline 
+\endhead 
 2017 - 2018 & MNHeadwaters & Sravan Chalasani , Karina Herrera, John Sisser, Zach Voss & 67\% Strongly Agree, 33\% Somewhat Agree & 67\% Excellent, 33\% Very Good & 67\% Always, 33\% Usually & 66\% Excellent, 33\% Satisfactory \\
-\end{supertabular}
+\end{longtable}
 
