--- a/tex/PostdoctoralAdvising.tex
+++ b/tex/PostdoctoralAdvising.tex
@@ -1,8 +1,10 @@
 % UC Bio-bib Catalog Postdoctoral Advising Table
-% Created on 2018-09-24 17:41
+% Created on 2018-10-10 23:23
 
-\tablehead{Postdoctoral Researcher & Years & Affiliation & Current Employment\\ \hline}
-\begin{supertabular}{lp{1.5cm} p{3.5cm}p{4.5cm}}
+\begin{longtable}{lp{1.5cm} p{3.5cm}p{4.5cm}}
+Postdoctoral Researcher & Years & Affiliation & Current Employment\\
+\hline 
+\endhead 
 Marc Mayes & 2016 -  & UCSB, Geography &   - \\
-\end{supertabular}
+\end{longtable}
 
