--- a/tex/ProfessionalService.tex
+++ b/tex/ProfessionalService.tex
@@ -1,13 +1,15 @@
 % UC Bio-bib Professional Service Table
-% Created on 2018-09-24 17:41
+% Created on 2018-10-10 23:23
 
-\tablehead{Year & Service\\ \hline}
-\begin{supertabular}{lp{15cm}} 
+\begin{longtable}{lp{15cm}}
+Year & Service\\
+\hline 
+\endhead 
 2014 - 2017 & Member, Hydrology Early Career Award Committee, American Geophysical Union \\
 2015 -  & Member, Editorial Board, Environmental Research Reviews, Environmental Research Letters \\
 2017 & Co-Convenor, AGU Fall Meeting, Session on ``Plant-Soil Interactions Rhizosphere: Experimental and Computational Advances'' \\
 2017 & Co-Convenor, AGU Fall Meeting, Session on ``Advances in Ecohydrology of Water-Stressed Environments'' \\
 2017 & Co-Convenor, International Association of Hydrological Sciences Conference, Session on ``Innovative ICT Tools for Water Management and Science'' \\
 2017 & Member, Academic Program Review Committee, School of Natural Resources and Environment, University of Arizona \\
-\end{supertabular}
+\end{longtable}
 
