--- a/tex/Reviews.tex
+++ b/tex/Reviews.tex
@@ -1,8 +1,10 @@
 % UC Bio-bib Reveiwer Activity Table
-% Created on 2018-09-24 17:41
+% Created on 2018-10-10 23:23
 
-\tablehead{Year & Activity & Journal/Agency\\ \hline}
-\begin{supertabular}{llp{12cm}}
+\begin{longtable}{llp{12cm}}
+Year & Activity & Journal/Agency\\
+\hline 
+\endhead 
 2016 & Referee & Environmental Research Letters   \\
 2016 & Referee & Geophysical Research Letters  (2) \\
 2016 & Referee & NSF Hydrological Sciences   \\
@@ -26,5 +28,5 @@
 2018 & Referee & NSF Hydrological Sciences   \\
 2018 & Referee & Nature Climate Change   \\
 2018 & Referee & PLOS One  (2) \\
-\end{supertabular}
+\end{longtable}
 
