--- a/tex/Submitted.tex
+++ b/tex/Submitted.tex
@@ -1,15 +1,17 @@
 % UC Bio-bib Publications Submitted Table
-% Created on 2018-09-24 17:41
+% Created on 2018-10-10 23:23
 
-\tablehead{\# & Year & Title and Authors & Publisher & Category\\ \hline}
-\begin{supertabular}{lcp{8.25cm}p{4.75cm}p{1.75cm}}
-R-1 & 2018 & {\bf Changes of daily evapotranspiration partitioning and  water use efficiency with a soil wetting-drying cycle in a sprinkle-irrigated cropland}, Xurong, M., Gong, D., Heng, L., Hsiao, T., Hao, W., Guo, Z., Li, Y, Caylor, KK  & \emph{ Science of the Total Environment } & Refereed Article\\
-R-2 & 2018 & {\bf Labor Sharing and Community-Level Vulnerability to Drought}, Schmitt-Harsh, M, Sweeney, S., Estes, L., Caylor, KK, Evans, T.  & \emph{ World Development } & Refereed Article\\
-R-3 & 2018 & {\bf Mapping cropland in an smallholder-dominated African savannas biome using spectral mixture analysis and binary logistic regression}, Sweeney, S, Ruseva, T., Estes, L, Caylor, KK, Evans, T.  & \emph{ Remote Sensing of Environment } & Refereed Article\\
-R-4 & 2018 & {\bf The Relative Influences of Climate and Crop Subsidies in Shaping Agricultural Land Use and Productivity}, Mastrorillo, M, Vink, N., Caylor. K., Oppenheimer, M., Estes, L.  & \emph{ Environmental Research Letters } & Refereed Article\\
-R-5 & 2018 & {\bf The salience of climate change in farmer decision making within smallholder semi-arid agroecosystems}, Waldman, K, Attari, S, Gower, D, Giroux, S, Evans, T, Caylor, KK  & \emph{ Climatic Change } & Refereed Article\\
-R-6 & 2018 & {\bf Perceptions and biases about climate variability in smallholder farming systems}, Waldman, K, Vergopolan, N., Attari, S.Z., Sheffiled, J., Estes, L.D., Caylor, KK, Evans, T.P  & \emph{ Weather \& Society } & Refereed Article\\
-R-7 & 2018 & {\bf A high-frequency mobile phone data collection approach for research in social-environmental systems: Applications in climate variability and food security in sub-Saharan Africa.}, Giroux, S., Caylor, KK, Kouper, I., Estes, L., Schumacher, J., Waldman, K., Evans, T.  & \emph{ Environmental Modelling \& Software } & Refereed Article\\
-R-8 & 2018 & {\bf A global database of water vapor isotopes measured with high temporal resolution infrared laser spectroscopy}, Wei, Zhongwang, Lee, Xuhui, Aemisegger, Franziska, Benetti, Marion, Berkelhammer, Max, Casado, Mathieu, Caylor, KK, Chrsiner, Emanuel, Dryoff, Christoph, Garcia, O.E., 17 others  & \emph{ Scientific Data } & Refereed Article\\
-\end{supertabular}
+\begin{longtable}{lcp{7.75cm}>{\raggedright}p{5.25cm}p{1.75cm}}
+\# & Year & Title and Authors & Publisher & Category\\
+\hline 
+\endhead 
+C-1 & 2018 & {\bf Changes of daily evapotranspiration partitioning and  water use efficiency with a soil wetting-drying cycle in a sprinkle-irrigated cropland}, Xurong, M., Gong, D., Heng, L., Hsiao, T., Hao, W., Guo, Z., Li, Y, Caylor, K.K..  & \emph{ Science of the Total Environment } .   & Refereed Article\\
+C-2 & 2018 & {\bf Labor Sharing and Community-Level Vulnerability to Drought}, Schmitt-Harsh, M, Sweeney, S., Estes, L., Caylor, K.K., Evans, T..  & \emph{ World Development } .   & Refereed Article\\
+C-3 & 2018 & {\bf Mapping cropland in an smallholder-dominated African savannas biome using spectral mixture analysis and binary logistic regression}, Sweeney, S, Ruseva, T., Estes, L, Caylor, K.K., Evans, T..  & \emph{ Remote Sensing of Environment } .   & Refereed Article\\
+C-4 & 2018 & {\bf The Relative Influences of Climate and Crop Subsidies in Shaping Agricultural Land Use and Productivity}, Mastrorillo, M, Vink, N., Caylor. K., Oppenheimer, M., Estes, L..  & \emph{ Environmental Research Letters } .   & Refereed Article\\
+C-5 & 2018 & {\bf The salience of climate change in farmer decision making within smallholder semi-arid agroecosystems}, Waldman, K, Attari, S, Gower, D, Giroux, S, Evans, T, Caylor, K.K..  & \emph{ Climatic Change } .   & Refereed Article\\
+C-6 & 2018 & {\bf Perceptions and biases about climate variability in smallholder farming systems}, Waldman, K, Vergopolan, N., Attari, S.Z., Sheffiled, J., Estes, L.D., Caylor, K.K., Evans, T.P.  & \emph{ Weather \& Society } .   & Refereed Article\\
+C-7 & 2018 & {\bf A high-frequency mobile phone data collection approach for research in social-environmental systems: Applications in climate variability and food security in sub-Saharan Africa.}, Giroux, S., Caylor, K.K., Kouper, I., Estes, L., Schumacher, J., Waldman, K., Evans, T..  & \emph{ Environmental Modelling \& Software } .   & Refereed Article\\
+C-8 & 2018 & {\bf A global database of water vapor isotopes measured with high temporal resolution infrared laser spectroscopy}, Wei, Zhongwang, Lee, Xuhui, Aemisegger, Franziska, Benetti, Marion, Berkelhammer, Max, Casado, Mathieu, Caylor, K.K., Chrsiner, Emanuel, Dryoff, Christoph, Garcia, O.E., 17 others.  & \emph{ Scientific Data } .   & Refereed Article\\
+\end{longtable}
 
