--- a/tex/DepartmentalService.tex
+++ b/tex/DepartmentalService.tex
@@ -1,11 +1,13 @@
 % UC Bio-bib Departmental Service Table
-% Created on 2018-09-24 17:41
+% Created on 2018-10-10 23:23
 
-\tablehead{Year & Service\\ \hline}
-\begin{supertabular}{lp{15cm}} 
+\begin{longtable}{lp{15cm}}
+Year & Service\\
+\hline 
+\endhead 
 2016 - 2017 & Member, Land Surface Processes Faculty Search Committee, Dept. of Geography, UCSB \\
 2017 - 2018 & Member, Chair's Advisory Committee, Department of Geography, UCSB \\
 2017 - 2018 & Member, Graduate Admission Committee, Department of Geography, University of California, Santa Barbara \\
 2018 - 2019 & Member, Spatial Data Science Faculty Search Committee, Department of Geography, UCSB \\
-\end{supertabular}
+\end{longtable}
 
