--- a/tex/GraduateAdvisingMS.tex
+++ b/tex/GraduateAdvisingMS.tex
@@ -1,8 +1,10 @@
 % UC Bio-bib Catalog GraduateAdvising Table
-% Created on 2018-09-24 17:41
+% Created on 2018-10-10 23:23
 
-\tablehead{Student & Year & Instituion & Chair/Member & Current Employment\\ \hline}
-\begin{supertabular}{lp{1.5cm} p{3.5cm}p{2cm}p{4.5cm}}
+\begin{longtable}{lp{1.5cm} p{4.5cm}p{2cm}p{4cm}}
+Student & Year & Instituion & Chair/Member & Current Employment\\
+\hline 
+\endhead 
 
-\end{supertabular}
+\end{longtable}
 
