--- a/tex/InPress.tex
+++ b/tex/InPress.tex
@@ -1,9 +1,11 @@
 % UC Bio-bib Publications In Press Table
-% Created on 2018-09-24 17:41
+% Created on 2018-10-10 23:23
 
-\tablehead{\# & Year & Title and Authors & Publisher & Category\\ \hline}
-\begin{supertabular}{lcp{8.25cm}p{4.75cm}p{1.75cm}}
-P-1 & 2018 & {\bf Comparing empirical and survey-based yield forecasts in a dryland agro-ecosystem}, Zhao, Y., Vergopolan, N., Baylis, K, Blekkin, J. , Caylor, KK, Evans, T.P., Giroux, S., Sheffield, J, Estes, L.  & \emph{ Agricultural \& Forest Meteorology } & Refereed Article\\
-P-2 & 2019 & {\bf Biophysical effects on soil crack morphology in a faunally active dryland vertisol}, DeCarlo, K., Caylor, KK  & \emph{ Geoderma } & Refereed Article\\
-\end{supertabular}
+\begin{longtable}{lcp{7.75cm}>{\raggedright}p{5.25cm}p{1.75cm}}
+\# & Year & Title and Authors & Publisher & Category\\
+\hline 
+\endhead 
+B-1 & 2018 & {\bf Comparing empirical and survey-based yield forecasts in a dryland agro-ecosystem}, Zhao, Y., Vergopolan, N., Baylis, K, Blekking, J. , Caylor, K.K., Evans, T.P., Giroux, S., Sheffield, J, Estes, L.. \href{https://ucsb.box.com/s/a8k851rd3sw2ec374ra98ixxbc34bopn}{[pdf]} & \emph{ Agricultural \& Forest Meteorology } 259: 305-316. doi:10.1016/j.agrformet.2018.06.024.  & Refereed Article\\
+B-2 & 2019 & {\bf Biophysical effects on soil crack morphology in a faunally active dryland vertisol}, DeCarlo, K., Caylor, K.K.. \href{https://ucsb.box.com/s/o7utttzbt5dt04rgopi7l5yhkqepw5bz}{[pdf]} & \emph{ Geoderma } 334: 134-145. doi:10.1016/j.geoderma.2018.07.042.  & Refereed Article\\
+\end{longtable}
 
