--- a/tex/UniversityService.tex
+++ b/tex/UniversityService.tex
@@ -1,8 +1,10 @@
 % UC Bio-bib University Service Table
-% Created on 2018-09-24 17:41
+% Created on 2018-10-10 23:23
 
-\tablehead{Year & Service\\ \hline}
-\begin{supertabular}{lp{15cm}} 
+\begin{longtable}{lp{15cm}}
+Year & Service\\
+\hline 
+\endhead 
 2016 - 2017 & Chair, Earth Research Institute, Personnel Committee \\
 2016 - 2017 & Ex-Officio Member, Earth Research Institute Advisory Committee, UCSB \\
 2016 - 2017  & Director, Earth Research Institute, University of California, Santa Barbara \\
@@ -13,5 +15,5 @@
 2017 - 2018  & Director, Earth Research Institute, University of California, Santa Barbara \\
 2018 & Member, Data Science Working Group, UCSB \\
 2018 - 2019 & Participating Faculty, Interdepartmental PhD Emphasis in Environment and Society \\
-\end{supertabular}
+\end{longtable}
 
