updated biobib with correct box links

--- a/biobib_kkc.tex
+++ b/biobib_kkc.tex
@@ -103,12 +103,14 @@ American Geophysical Union, Association of American Geographers, American Associ
 {\bf Work Submitted:}
 
 % For some reason, I need this for the list to appear...
-{\tiny :}
+% {\tiny :}
 
-%\vspace{0.15cm}
-{\setlength{\extrarowheight}{3.5pt}
-\input{tex/Submitted}
-}
+% %\vspace{0.15cm}
+% {\setlength{\extrarowheight}{3.5pt}
+% \input{tex/Submitted}
+% }
+None Provided.
+
 
 \vspace{1cm}
 \textbf{PART II.  TEACHING (50\% Geography Dept. workload; 50\% Bren School workload. Teaching release throughout the review period.)}
